--- a/footbal-tournament/index.html
+++ b/footbal-tournament/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/public/euro-2024.ico" />
+    <link rel="icon" type="image/x-icon" href="/euro-2024.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Football Tournament</title>
   </head>
